1.ignore Testing directory 2.support apple os 3.using ctest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,20 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(cheap VERSION 0.0.0)
 
-add_subdirectory(test)
+# Do not allow in source builds
+set(CMAKE_DISABLE_SOURCE_CHANGES ON)
+set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 
+# Make sure we can import CMake extensions
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+# Must before test directory
 include(CTest)
-enable_testing()
+if(BUILD_TESTING)
+    enable_testing()
+endif()
+
+add_subdirectory(test)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
