--- a/test/set_self_thread_name/CMakeLists.txt
+++ b/test/set_self_thread_name/CMakeLists.txt
@@ -1,3 +1,4 @@
 
-add_test(set_self_thread_name set_self_thread_name set_self_thread_name) 
-add_executable(set_self_thread_name main.c)
+add_test(set_self_thread_name set_self_thread_name set_self_thread_name)
+add_executable(set_self_thread_name main.c ../../src/set_self_thread_name.c)
+target_link_libraries(set_self_thread_name pthread)
